# ChangeLog for dev-ruby/twitter_oauth
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*twitter_oauth-0.3.6 (07 May 2010)

  07 May 2010; Hans de Graaff <graaff@gentoo.org>
  +twitter_oauth-0.3.6.ebuild:
  Version bump.

*twitter_oauth-0.3.2 (27 Jan 2010)

  27 Jan 2010; Hans de Graaff <graaff@gentoo.org>
  +twitter_oauth-0.3.2.ebuild, +metadata.xml:
  Initial import.
