@@ -1,16 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-DIST twitter_oauth-0.3.2.gem 10240 RMD160 5790c44aa235df4013dd501a299e52a421116a59 SHA1 f0815f295fa0b44d1302bca49b78fe33878e4040 SHA256 e3e91de72142f3f51a6c33bbe93602e72c0101b5eac0b41105e167b281033cb4
 DIST twitter_oauth-0.3.6.gem 11264 RMD160 fcbbaddddd85e1429945acf99a287c75c5a6153a SHA1 98d88c2833b4b3e9459dd93f3014f699a4aaf523 SHA256 168e7e47fe5bcdfaa639417c4a041369e60ad4d5b9c54ee93afdbe06f0e172d8
-EBUILD twitter_oauth-0.3.2.ebuild 629 RMD160 f9dd35281ed3ee32d2cda999a7d368f3ea8fb605 SHA1 ff734a62d97c8f9a2dc256b8fdad26b2066bf3bc SHA256 1004a7d8d20fb7a548ab8723761df5b18501bb8183584b64efe466098e1edfa3
 EBUILD twitter_oauth-0.3.6.ebuild 629 RMD160 f9dd35281ed3ee32d2cda999a7d368f3ea8fb605 SHA1 ff734a62d97c8f9a2dc256b8fdad26b2066bf3bc SHA256 1004a7d8d20fb7a548ab8723761df5b18501bb8183584b64efe466098e1edfa3
-MISC ChangeLog 408 RMD160 f96c047e2c60f873f4a40024e3858f30ccf024d3 SHA1 c3c0af95a655fdac2d3b9778720c7a9a5bee219f SHA256 f054caa8deda070bb8873129d87487a0cce98cce0628f1063eb587e04ffed8a7
+MISC ChangeLog 512 RMD160 85b7275be9d12d364fa5fef3a299cc8c997d81e8 SHA1 3b8b7a1e8cc44ce2f5bf284776493facf954c15e SHA256 1aed1a61a7856766db59e1d22b69ee8ef785abfe0973de448aebc46141983673
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.14 (GNU/Linux)
+Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAkvkCKEACgkQeM7EJeUH71PxMgCeJ+KFbum0ZdhISDbtQpXzB6pR
-Up0AmQHLueIAJcwI97Q41O3r7dsWKWsX
-=Bazn
+iF4EAREIAAYFAk0CCXEACgkQppaJjIURYXL58QEAjPBW6N0iqxNicUkLd3l4awEM
+IVjNW/ewAzCnVN3e+coA/jZkcthhjjEJmfsk5Al8hPMgJe2I2Nag0zunnMsYNfBM
+=vNlD
 -----END PGP SIGNATURE-----
