@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  10 Dec 2010; Hans de Graaff <graaff@gentoo.org>
+  -twitter_oauth-0.3.2.ebuild:
+  Remove old version.
+
 *twitter_oauth-0.3.6 (07 May 2010)
 
   07 May 2010; Hans de Graaff <graaff@gentoo.org>
